--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="https://ppms-oc.github.io/batimetriabunge.html">
 						<span class="img">
-							<img src="assets/images/MapChallenge_Map22.jpeg" alt="">
+							<img src="assets/images/bunge.png" alt="">
 							<span class="cover"><span class="more">Details Here →</span></span>
 						</span>
-						<span class="title">#30DayMapChallenge</span>
+						<span class="title">Batimetria</span>
 					</a>
 					
 					<h4></h4>
