--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 	</div>
 	
-	<div class="mobileShow">To learn more, see <a href="https://timstonge.github.io/about.html" target="_blank"><strong>my resume!</strong></a><br></div><!-- /container -->
+	<!-- <div class="mobileShow">To learn more, see <a href="https://timstonge.github.io/about.html" target="_blank"><strong>my resume!</strong></a><br></div><!-- /container -->
 	<br>
 </main>
 
