--- a/batimetriabunge.html
+++ b/batimetriabunge.html
@@ -72,7 +72,7 @@
                     </header>
 
 					<div class="your-class">
-						<img class="myImg" src="assets/images/bungePontosSondagem.png">
+						<img class="myImg" src="assets/images/bungePontosSondagem.jpg">
 						
 						<img class="myImg" src="assets/images/bungeTOTAL.jpg">
 						<img class="myImg" src="assets/images/bunge.jpg">
