--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="https://ppms-oc.github.io/batimetriabunge.html">
 						<span class="img">
-							<img src="assets/images/bunge.jpg" alt="">
+							<img src="assets/images/bunge.webp" alt="">
 							<span class="cover"><span class="more">Details Here →</span></span>
 						</span>
 						<span class="title">Batimetria</span>
