--- a/batimetriabunge.html
+++ b/batimetriabunge.html
@@ -74,8 +74,8 @@
 					<div class="your-class">
 						<img class="myImg" src="assets/images/bungePontosSondagem.jpg">
 						
-						<img class="myImg" src="assets/images/bungeTOTAL.jpg">
-						<img class="myImg" src="assets/images/bunge.jpg">
+						<img class="myImg" src="assets/images/bungeTOTAL.webp">
+						<img class="myImg" src="assets/images/bunge.webp">
 
 					</div>
 					
