--- a/batimetriabunge.html
+++ b/batimetriabunge.html
@@ -14,7 +14,7 @@
 
 
 
-	<link rel="shortcut icon" href="assets/images/windrose.png">
+	<link rel="shortcut icon" href="assets/images/windrose.webp">
 	
 	<!-- Bootstrap -->
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -108,7 +108,7 @@
                     <div class="widget">
                         <ul class="list-group">
                                 <li class="list-group-item pull-left">
-                                    <a href="https://www.bunge.com.br/"> <img src="assets/images/bungelogo.png" 
+                                    <a href="https://www.bunge.com.br/"> <img src="assets/images/bungelogo.webp" 
                                     class="media-object img-responsive img-thumbnail"></a>
                                     <!-- <img src="assets/images/bungelogo.png" style="width:220px;height:160px;padding-right:0px" class="pull-left"> -->
                                     <h4 class="custom-subsubheader">Freelancer</h4>
