--- a/animacao.html
+++ b/animacao.html
@@ -101,7 +101,7 @@
                     <div class="widget">
                         <ul class="list-group">
                                 <li class="list-group-item pull-left">
-                                    <img src="assets/images/VadiandoInsta.jpeg" style="width:200px;height:160px;padding-right:0px" class="pull-left">
+                                    <img src="assets/images/VadiandoInsta.webp" style="width:200px;height:160px;padding-right:0px" class="pull-left">
                                     <h4 class="custom-subsubheader">Carol e Paulo</h4>
                                     <p><strong>@vadiandonopedal</strong></p>
                                 </li>
