--- a/batimetriabunge.html
+++ b/batimetriabunge.html
@@ -108,7 +108,7 @@
                     <div class="widget">
                         <ul class="list-group">
                                 <li class="list-group-item pull-left">
-                                    <a href="https://www.bunge.com.br/"> <img src="assets/images/bungelogo.webp" 
+                                    <a href="https://goo.gl/maps/RXAemTUoQZMnDhfz8"> <img src="assets/images/logo_thalassus.jpg" 
                                     class="media-object img-responsive img-thumbnail"></a>
                                     <!-- <img src="assets/images/bungelogo.png" style="width:220px;height:160px;padding-right:0px" class="pull-left"> -->
                                     <h4 class="custom-subsubheader">Freelancer</h4>
