--- a/batimetriabunge.html
+++ b/batimetriabunge.html
@@ -111,7 +111,7 @@
                                     <a href="https://goo.gl/maps/RXAemTUoQZMnDhfz8"> <img src="assets/images/logo_thalassus.jpg" 
                                     class="media-object img-responsive img-thumbnail"></a>
                                     <!-- <img src="assets/images/bungelogo.png" style="width:220px;height:160px;padding-right:0px" class="pull-left"> -->
-                                    <h4 class="custom-subsubheader">Thalassus Serviços de Dragagem, Batimetria e Mergulho Profissional LTDA</h4>
+                                    <h4 class="custom-subsubheader">Thalassus Serviços de Dragagem, Batimetria e Mergulho Profissional Ltda</h4>
                                     <p><strong>2022</strong></p>
                                 </li>
                         </ul>
